# hackdb

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  docker-compose.yml  docker-entrypoint.sh  local_settings.py.example  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django-ci.yml  docker-ci.yml  docker-publish.yml
api/: urls.py  views.py
apikeys/: README.md  admin.py  apps.py  decorators.py  middleware.py  models.py
apikeys/migrations/: 0001_initial.py  0002_alter_apikey_description.py  0003_apikey_uuid.py  0004_auto_20240607_1423.py  0005_auto_20240607_1423.py
datarequest/: apps.py  urls.py  views.py
discorduser/: admin.py  apps.py  models.py  urls.py  views.py
discorduser/migrations/: 0001_initial.py
groupadmin/: admin.py  apps.py  models.py  urls.py  views.py
groupadmin/migrations/: 0001_initial.py  0002_groupproperties_owners_manage_owners.py  (+1 more)
hackdb/: admin.py  asgi.py  settings.py  settings_common.py  settings_docker.py  urls.py  validators.py  wsgi.py
ldapsync/: apps.py  receivers.py  requirements.txt  serializers.py  utils.py
mailman2/: admin.py  apps.py  context_processors.py  mailmanapi.py  models.py  receivers.py  urls.py  utils.py  views.py
membership/: admin.py  apps.py  models.py  receivers.py  urls.py  views.py
motd/: admin.py  apps.py  context_processors.py  models.py
nfctokens/: admin.py  apps.py  models.py  urls.py  views.py
posixusers/: admin.py  apps.py  hashers.py  models.py  password_validation.py  receivers.py  tests.py  urls.py  views.py
(+81 files in other folders)
